--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <button id="decrease">- Decrease</button>
             <button id="reset">Reset</button>
             <button id="increase">+ Increase</button>
+            <button id="increase5">+5</button>
+            <button id="decrease5">-5</button>
         </div>
     </div>
 
