--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             font-weight: bold;
         }
 
-        #decrease {
+        #decrease, #decrease5 {
             background: #ff6b6b;
             color: white;
         }
@@ -61,7 +61,7 @@
             color: white;
         }
 
-        #increase {
+        #increase, #increase5 {
             background: #51cf66;
             color: white;
         }
